--- a/ch15-04-rc.html
+++ b/ch15-04-rc.html
@@ -169,7 +169,7 @@
                     <main>
                         <h2><a class="header" href="#rct-引用計數智慧指標" id="rct-引用計數智慧指標"><code>Rc&lt;T&gt;</code> 引用計數智慧指標</a></h2>
 <p>在大多數的場合，所有權是很明確的：你能確切知道哪些變數擁有哪些數值。然而還是有些情況會需要讓一個數值能有數個擁有者。舉例來說，在資料結構中數個邊可能就會指向同個節點，而該節點概念上就被所有指向它的邊所擁有。節點直到沒有任何邊指向它時才會被清除。</p>
-<p>要有多重所有權的話，Rust 有一個型別叫做 <code>Rc&lt;T&gt;</code>，這是*引用計數（reference counting）*的簡寫。<code>Rc&lt;T&gt;</code> 型別會追蹤引用其數值的數量來決定該數值是否還在使用中。如果數值沒有任何引用的話，該數值就可以被清除，因爲不會產生任何無效引用。</p>
+<p>要有多重所有權的話，Rust 有一個型別叫做 <code>Rc&lt;T&gt;</code>，這是<em>引用計數（reference counting）</em> 的簡寫。<code>Rc&lt;T&gt;</code> 型別會追蹤引用其數值的數量來決定該數值是否還在使用中。如果數值沒有任何引用的話，該數值就可以被清除，因爲不會產生任何無效引用。</p>
 <p>想像 <code>Rc&lt;T&gt;</code> 是個在客廳裡的電視，當有人進入客廳要看電視時，它們就會打開它。其他人也能進來觀看電視。當最後一個人離開客廳時，它們會關掉電視，因爲沒有任何人會再看了。如果當其他人還在看電視時，有人關掉了它，其他在看電視的人肯定會生氣。</p>
 <p><code>Rc&lt;T&gt;</code> 型別的使用時機在於當我們想要在堆積上分配一些資料給程式中數個部分讀取，但是我們無法在編譯時期決定哪個部分會最後一個結束使用數值的部分。如果我們知道哪個部分會最後結束的話，我們可以將那個部分作爲資料的擁有者就好，然後正常的所有權規則就會在編譯時生效。</p>
 <p>注意到 <code>Rc&lt;T&gt;</code> 只適用於單一執行緒（single-threaded）的場合。當我們在第十六章討論並行（concurrency）時，我們會介紹如何在多執行緒程式達成引用計數。</p>
@@ -235,7 +235,7 @@ fn main() {
 <p><span class="caption">範例 15-18：使用 <code>Rc&lt;T&gt;</code> 來定義 <code>List</code></span></p>
 <p>我們需要使用 <code>use</code> 陳述式來將 <code>Rc&lt;T&gt;</code> 引入作用域，因爲它沒有被包含在 prelude 中。在 <code>main</code> 中，我們建立了一個包含 5 與 10 的列表並存入 <code>a</code> 的 <code>Rc&lt;List&gt;</code>。然後當我們建立 <code>b</code> 與 <code>c</code> 時，我們會呼叫函式 <code>Rc::clone</code> 來將 <code>a</code> 的 <code>Rc&lt;List&gt;</code> 引用作爲引數傳入。</p>
 <p>當然我們可以呼叫 <code>a.clone()</code> 而非 <code>Rc::clone(&amp;a)</code>，但是在此情形中 Rust 的慣例是使用 <code>Rc::clone</code>。<code>Rc::clone</code> 的實作不會像大多數型別的 <code>clone</code> 實作會深拷貝（deep copy）所有的資料。 <code>Rc::clone</code> 的呼叫只會增加引用計數，這花費的時間就相對很少。深拷貝通常會花費比較多的時間。透過使用 <code>Rc::clone</code> 來引用計數，我們可以以視覺辨別出這是深拷貝的克隆還是增加引用計數的克隆。當我們需要調查程式碼的效能問題時，我們就只需要考慮深拷貝的克隆，而不必在意 <code>Rc::clone</code>。</p>
-<h3><a class="header" href="#cloning-an-rct-increases-the-reference-count" id="cloning-an-rct-increases-the-reference-count">Cloning an <code>Rc&lt;T&gt;</code> Increases the Reference Count</a></h3>
+<h3><a class="header" href="#克隆-rct-實例會增加其引用計數" id="克隆-rct-實例會增加其引用計數">克隆 <code>Rc&lt;T&gt;</code> 實例會增加其引用計數</a></h3>
 <p>讓我們改變範例 15-18 的範例，好讓我們能觀察引用計數在我們建立與釋放 <code>a</code> 的 <code>Rc&lt;List&gt;</code> 引用時產生的變化。</p>
 <p>範例 15-19，我們改變了 <code>main</code> 讓列表 <code>c</code> 寫在一個內部作用域中，然後我們就能觀察到當 <code>c</code> 離開作用域時引用計數產生的改變。</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -249,14 +249,14 @@ fn main() {
 </span><span class="boring">
 </span>fn main() {
     let a = Rc::new(Cons(5, Rc::new(Cons(10, Rc::new(Nil)))));
-    println!(&quot;count after creating a = {}&quot;, Rc::strong_count(&amp;a));
+    println!(&quot;建立 a 後的計數 = {}&quot;, Rc::strong_count(&amp;a));
     let b = Cons(3, Rc::clone(&amp;a));
-    println!(&quot;count after creating b = {}&quot;, Rc::strong_count(&amp;a));
+    println!(&quot;建立 b 後的計數 = {}&quot;, Rc::strong_count(&amp;a));
     {
         let c = Cons(4, Rc::clone(&amp;a));
-        println!(&quot;count after creating c = {}&quot;, Rc::strong_count(&amp;a));
+        println!(&quot;建立 c 後的計數 = {}&quot;, Rc::strong_count(&amp;a));
     }
-    println!(&quot;count after c goes out of scope = {}&quot;, Rc::strong_count(&amp;a));
+    println!(&quot;c 離開作用域後的計數 = {}&quot;, Rc::strong_count(&amp;a));
 }
 </code></pre></pre>
 <p><span class="caption">範例 15-19：印出引用計數</span></p>
@@ -266,10 +266,10 @@ fn main() {
    Compiling cons-list v0.1.0 (file:///projects/cons-list)
     Finished dev [unoptimized + debuginfo] target(s) in 0.45s
      Running `target/debug/cons-list`
-count after creating a = 1
-count after creating b = 2
-count after creating c = 3
-count after c goes out of scope = 2
+建立 a 後的計數 = 1
+建立 b 後的計數 = 2
+建立 c 後的計數 = 3
+c 離開作用域後的計數 = 2
 </code></pre>
 <p>我們可以看到 <code>a</code> 的 <code>Rc&lt;List&gt;</code> 會有個初始引用計數 1，然後我們每次呼叫 <code>clone</code> 時，計數會加 1。當 <code>c</code> 離開作用域時，計數會減 1。我們不必呼叫任何函式來減少引用計數，像呼叫 <code>Rc::clone</code> 時才會增加引用計數那樣。當 <code>Rc&lt;T&gt;</code> 數值離開作用域時，<code>Drop</code> 特徵的實作就會自動減少引用計數。</p>
 <p>我們無法從此例觀察到的是當 <code>b</code> 然後是 <code>a</code> 從 <code>main</code> 的結尾離開作用域時，計數會是 0，然後 <code>Rc&lt;List&gt;</code> 在此時就會完全被清除。使用 <code>Rc&lt;T&gt;</code> 能允許單一數值能有數個擁有者，然後計數會確保只要有任何擁有者還存在的狀況下，數值會保持是有效的。</p>
