--- a/ch15-05-interior-mutability.html
+++ b/ch15-05-interior-mutability.html
@@ -168,7 +168,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#refcellt-與內部可變性模式" id="refcellt-與內部可變性模式"><code>RefCell&lt;T&gt;</code> 與內部可變性模式</a></h2>
-<p>*內部可變性（Interior mutability）*是 Rust 中的一種設計模式，能讓你能對即使是不可變引用的資料也能改變。正常狀況下，借用規則是不允許這種動作的。爲了改變資料，這樣的模式會在資料結構內使用 <code>unsafe</code> 程式碼來繞過 Rust 的常見可變性與借用規則。我們尚未介紹什麼是不安全（unsafe）的程式碼，我們會在第十九章談到。當編譯器無法保障，但我們可以確保借用規則在執行時能夠遵循的話，我們就可以使用擁有內部可變性模式的型別。其內的 <code>unsafe</code> 程式碼會透過安全的 API 封裝起來，讓外部型別仍然是不可變的。</p>
+<p><em>內部可變性（Interior mutability）</em> 是 Rust 中的一種設計模式，能讓你能對即使是不可變引用的資料也能改變。正常狀況下，借用規則是不允許這種動作的。爲了改變資料，這樣的模式會在資料結構內使用 <code>unsafe</code> 程式碼來繞過 Rust 的常見可變性與借用規則。我們尚未介紹什麼是不安全（unsafe）的程式碼，我們會在第十九章談到。當編譯器無法保障，但我們可以確保借用規則在執行時能夠遵循的話，我們就可以使用擁有內部可變性模式的型別。其內的 <code>unsafe</code> 程式碼會透過安全的 API 封裝起來，讓外部型別仍然是不可變的。</p>
 <p>讓我們觀察擁有內部可變性模式的 <code>RefCell&lt;T&gt;</code> 型別來探討此概念。</p>
 <h3><a class="header" href="#透過-refcellt-在執行時強制檢測借用規則" id="透過-refcellt-在執行時強制檢測借用規則">透過 <code>RefCell&lt;T&gt;</code> 在執行時強制檢測借用規則</a></h3>
 <p>不像 <code>Rc&lt;T&gt;</code>，<code>RefCell&lt;T&gt;</code> 型別的資料只會有一個所有權。所以 <code>RefCell&lt;T&gt;</code> 與 <code>Box&lt;T&gt;</code> 這種型別有何差別呢？回憶一下你在第四章學到的借用規則：</p>
@@ -216,7 +216,7 @@ To learn more, run the command again with --verbose.
 <p>然而在某些特定情況，我們會想要能夠有個方法可以改變一個數值，但該數值對其他程式碼而言仍然是不可變的。數值提供的方法以外的程式碼都無法改變其值。使用 <code>RefCell&lt;T&gt;</code> 是取得內部可變性的方式之一。但 <code>RefCell&lt;T&gt;</code> 仍然要完全遵守借用規則：編譯器的借用檢查器會允許這些內部可變性，然後在執行時才檢查借用規則。如果你違反規則，你就會得到 <code>panic!</code> 而非編譯錯誤。</p>
 <p>讓我們用一個實際例子來探討如何使用 <code>RefCell&lt;T&gt;</code> 來改變不可變數值，並瞭解爲何這是很實用的。</p>
 <h4><a class="header" href="#內部可變性的使用案例模擬物件" id="內部可變性的使用案例模擬物件">內部可變性的使用案例：模擬物件</a></h4>
-<p>*測試替身（test double）*是一個通用程式設計概念，表示一個在測試中替代某種型別的型別。*模擬物件（Mock objects）*是測試替身其中一種特定型別，這能紀錄測試過程中發生什麼事並讓你能判斷動作是否正確。</p>
+<p><em>測試替身（test double）</em> 是一個通用程式設計概念，表示一個在測試中替代某種型別的型別。<em>模擬物件（Mock objects）</em> 是測試替身其中一種特定型別，這能紀錄測試過程中發生什麼事並讓你能判斷動作是否正確。</p>
 <p>Rust 的物件與其他語言中的物件概念並不全然相同，而且 Rust 的標準函式庫內也沒有如其他語言會內建的模擬物件功能。不過你還是可以有方法來建立結構體來作爲模擬物件。</p>
 <p>以下是我們要測試的情境：我們建立一個函式庫來追蹤一個數值與最大值的差距，並依據該差距傳送訊息。舉例來說，此函式庫就能用來追蹤使用者允許呼叫 API 次數的上限。</p>
 <p>我們的函式庫提供的功能這只有追蹤與最大值的距離以及何時該傳送什麼訊息。使用函式庫的應用程式要提供傳送訊息的機制，應用程式可以將訊息存在應用程式內、傳送電子郵件、傳送文字訊息或其他等等。函式庫不需要知道細節，它只需要在意會有項目實作我們提供的 <code>Messenger</code> 特徵。範例 15-20 顯示了函式庫的程式碼：</p>
@@ -252,13 +252,13 @@ where
         let percentage_of_max = self.value as f64 / self.max as f64;
 
         if percentage_of_max &gt;= 1.0 {
-            self.messenger.send(&quot;Error: You are over your quota!&quot;);
+            self.messenger.send(&quot;錯誤：你超過使用上限了！&quot;);
         } else if percentage_of_max &gt;= 0.9 {
             self.messenger
-                .send(&quot;Urgent warning: You've used up over 90% of your quota!&quot;);
+                .send(&quot;緊急警告：你已經使用 90% 的配額了！&quot;);
         } else if percentage_of_max &gt;= 0.75 {
             self.messenger
-                .send(&quot;Warning: You've used up over 75% of your quota!&quot;);
+                .send(&quot;警告：你已經使用 75% 的配額了！&quot;);
         }
     }
 }
@@ -296,13 +296,13 @@ where
 </span><span class="boring">        let percentage_of_max = self.value as f64 / self.max as f64;
 </span><span class="boring">
 </span><span class="boring">        if percentage_of_max &gt;= 1.0 {
-</span><span class="boring">            self.messenger.send(&quot;Error: You are over your quota!&quot;);
+</span><span class="boring">            self.messenger.send(&quot;錯誤：你超過使用上限了！&quot;);
 </span><span class="boring">        } else if percentage_of_max &gt;= 0.9 {
 </span><span class="boring">            self.messenger
-</span><span class="boring">                .send(&quot;Urgent warning: You've used up over 90% of your quota!&quot;);
+</span><span class="boring">                .send(&quot;緊急警告：你已經使用 90% 的配額了！&quot;);
 </span><span class="boring">        } else if percentage_of_max &gt;= 0.75 {
 </span><span class="boring">            self.messenger
-</span><span class="boring">                .send(&quot;Warning: You've used up over 75% of your quota!&quot;);
+</span><span class="boring">                .send(&quot;警告：你已經使用 75% 的配額了！&quot;);
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">}
@@ -342,7 +342,7 @@ mod tests {
 </code></pre>
 <p><span class="caption">範例 15-21：嘗試實作 <code>MockMessenger</code> 但借用檢查器不允許</span></p>
 <p>此測試程式碼定義了一個結構體 <code>MockMessenger</code> 其有個 <code>sent_messages</code> 欄位並存有 <code>String</code> 數值的 <code>Vec</code> 來追蹤被通知要傳送的訊息。我們也定義了一個關聯函式 <code>new</code> 讓我們可以方便建立起始訊息列表爲空的 <code>MockMessenger</code>。我們對 <code>MockMessenger</code> 實作 <code>Messenger</code> 特徵，這樣我們才能將 <code>MockMessenger</code> 交給 <code>LimitTracker</code>。在 <code>send</code> 方法的定義中，我們取得由參數傳遞的訊息，並存入 <code>MockMessenger</code> 的 <code>sent_messages</code> 列表中。</p>
-<p>在測試中，我們測試當 <code>LimitTracker</code> 被通知將 <code>value</code> 設爲超過 <code>max</code> 數值 75% 的某個值。首先，我們建立新的 <code>MockMessenger</code>，其起始爲一個空的訊息列表。然後我們建立一個新的 <code>LimitTracker</code> 並將 <code>MockMessenger</code> 的引用與一個 <code>max</code> 爲 100 的數值賦值給它。我們用數值 80 來呼叫 <code>LimitTracker</code> 的 <code>set_value</code> 方法，此值會超過 100 的 75%。然後我們判定 <code>MockMessenger</code> 追蹤的訊息列表需要至守有一個訊息。</p>
+<p>在測試中，我們測試當 <code>LimitTracker</code> 被通知將 <code>value</code> 設爲超過 <code>max</code> 數值 75% 的某個值。首先，我們建立新的 <code>MockMessenger</code>，其起始爲一個空的訊息列表。然後我們建立一個新的 <code>LimitTracker</code> 並將 <code>MockMessenger</code> 的引用與一個 <code>max</code> 爲 100 的數值賦值給它。我們用數值 80 來呼叫 <code>LimitTracker</code> 的 <code>set_value</code> 方法，此值會超過 100 的 75%。然後我們判定 <code>MockMessenger</code> 追蹤的訊息列表需要至少有一個訊息。</p>
 <p>但是此測試有個問題，如以下所示：</p>
 <pre><code class="language-text">$ cargo test
    Compiling limit-tracker v0.1.0 (file:///projects/limit-tracker)
@@ -361,7 +361,7 @@ error: could not compile `limit-tracker`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>我們無法修改 <code>MockMessenger</code> 來追蹤訊息，因爲 <code>send</code> 方法取得的是 <code>self</code> 的不可變引用。而我們也無法使用錯誤訊息中推薦使用的 <code>&amp;mut self</code>，因爲 <code>send</code> 的簽名就會與 <code>Messenger</code> 特徵所定義的不相符（你可以是看看並觀察錯誤訊息）。</p>
+<p>我們無法修改 <code>MockMessenger</code> 來追蹤訊息，因爲 <code>send</code> 方法取得的是 <code>self</code> 的不可變引用。而我們也無法使用錯誤訊息中推薦使用的 <code>&amp;mut self</code>，因爲 <code>send</code> 的簽名就會與 <code>Messenger</code> 特徵所定義的不相符（你可以試看看並觀察錯誤訊息）。</p>
 <p>這就是內部可變性能帶來幫助的場合！我們會將 <code>sent_messages</code> 存入 <code>RefCell&lt;T&gt;</code> 內，然後 <code>send</code> 訊息就也能夠進行修改存入訊息。範例 15-22 顯示了變更後的程式碼：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">pub trait Messenger {
@@ -392,13 +392,13 @@ To learn more, run the command again with --verbose.
 </span><span class="boring">        let percentage_of_max = self.value as f64 / self.max as f64;
 </span><span class="boring">
 </span><span class="boring">        if percentage_of_max &gt;= 1.0 {
-</span><span class="boring">            self.messenger.send(&quot;Error: You are over your quota!&quot;);
+</span><span class="boring">            self.messenger.send(&quot;錯誤：你超過使用上限了！&quot;);
 </span><span class="boring">        } else if percentage_of_max &gt;= 0.9 {
 </span><span class="boring">            self.messenger
-</span><span class="boring">                .send(&quot;Urgent warning: You've used up over 90% of your quota!&quot;);
+</span><span class="boring">                .send(&quot;緊急警告：你已經使用 90% 的配額了！&quot;);
 </span><span class="boring">        } else if percentage_of_max &gt;= 0.75 {
 </span><span class="boring">            self.messenger
-</span><span class="boring">                .send(&quot;Warning: You've used up over 75% of your quota!&quot;);
+</span><span class="boring">                .send(&quot;警告：你已經使用 75% 的配額了！&quot;);
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">}
@@ -445,10 +445,10 @@ mod tests {
 <p>至於 <code>send</code> 方法的實作，第一個參數仍然是 <code>self</code> 的不可變借用，這就符合特徵所定義的。我們在 <code>self.sent_messages</code> 對 <code>RefCell&lt;Vec&lt;String&gt;&gt;</code> 呼叫 <code>borrow_mut</code> 來取得 <code>RefCell&lt;Vec&lt;String&gt;&gt;</code> 內的可變引用數值，也就是向量。然後我們對向量的可變引用呼叫 <code>push</code> 來追蹤測試中的訊息。</p>
 <p>最後一項改變是判定：要看到內部向量有多少項目的話，我們對 <code>RefCell&lt;Vec&lt;String&gt;&gt;</code> 呼叫 <code>borrow</code> 來取得向量的不可變引用。</p>
 <p>現在你已經知道如何使用 <code>RefCell&lt;T&gt;</code>，讓我們進一步探討它如何運作的吧！</p>
-<h4><a class="header" href="#keeping-track-of-borrows-at-runtime-with-refcellt" id="keeping-track-of-borrows-at-runtime-with-refcellt">Keeping Track of Borrows at Runtime with <code>RefCell&lt;T&gt;</code></a></h4>
+<h4><a class="header" href="#透過-refcellt-在執行時追蹤借用" id="透過-refcellt-在執行時追蹤借用">透過 <code>RefCell&lt;T&gt;</code> 在執行時追蹤借用</a></h4>
 <p>當建立不可變與可變引用時，我們分別使用 <code>&amp;</code> 和 <code>&amp;mut</code> 語法。而對於 <code>RefCell&lt;T&gt;</code> 的話，我們使用 <code>borrow</code> 和 <code>borrow_mut</code> 方法，這是 <code>RefCell&lt;T&gt;</code> 所提供的安全 API 之一。<code>borrow</code> 方法回傳一個智慧指標型別 <code>Ref&lt;T&gt;</code>，而 <code>borrow_mut</code> 回傳智慧指標型別 <code>RefMut&lt;T&gt;</code>。這兩個型別都有實作 <code>Deref</code>，所以我們可以像一般引用來對待它們。</p>
 <p><code>RefCell&lt;T&gt;</code> 會追蹤當前有多少 <code>Ref&lt;T&gt;</code> 和 <code>RefMut&lt;T&gt;</code> 智慧指標存在。每次我們呼叫 <code>borrow</code> 時，<code>RefCell&lt;T&gt;</code> 會增加不可變借用計數。當 <code>Ref&lt;T&gt;</code> 離開作用域時，不可變借用計數就會減一。就和編譯時借用規則一樣，<code>RefCell&lt;T&gt;</code> 讓我們同一時間要麼只能有一個可變引用，要麼可以有數個不可變引用。</p>
-<p>如果我們嘗試違法這些規則，我們不會像引用那樣得到編譯器錯誤，<code>RefCell&lt;T&gt;</code> 的實作會在執行時恐慌。 範例 15-23 修改了範例 15-22 的 <code>send</code> 實作。我們故意嘗試在同個作用域下建立兩個可變引用，來說明 <code>RefCell&lt;T&gt;</code> 會不允許我們在執行時這樣做。</p>
+<p>如果我們嘗試違反這些規則，我們不會像引用那樣得到編譯器錯誤，<code>RefCell&lt;T&gt;</code> 的實作會在執行時恐慌。 範例 15-23 修改了範例 15-22 的 <code>send</code> 實作。我們故意嘗試在同個作用域下建立兩個可變引用，來說明 <code>RefCell&lt;T&gt;</code> 會不允許我們在執行時這樣做。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><code class="language-rust ignore panics"><span class="boring">pub trait Messenger {
 </span><span class="boring">    fn send(&amp;self, msg: &amp;str);
@@ -478,13 +478,13 @@ mod tests {
 </span><span class="boring">        let percentage_of_max = self.value as f64 / self.max as f64;
 </span><span class="boring">
 </span><span class="boring">        if percentage_of_max &gt;= 1.0 {
-</span><span class="boring">            self.messenger.send(&quot;Error: You are over your quota!&quot;);
+</span><span class="boring">            self.messenger.send(&quot;錯誤：你超過使用上限了！&quot;);
 </span><span class="boring">        } else if percentage_of_max &gt;= 0.9 {
 </span><span class="boring">            self.messenger
-</span><span class="boring">                .send(&quot;Urgent warning: You've used up over 90% of your quota!&quot;);
+</span><span class="boring">                .send(&quot;緊急警告：你已經使用 90% 的配額了！&quot;);
 </span><span class="boring">        } else if percentage_of_max &gt;= 0.75 {
 </span><span class="boring">            self.messenger
-</span><span class="boring">                .send(&quot;Warning: You've used up over 75% of your quota!&quot;);
+</span><span class="boring">                .send(&quot;警告：你已經使用 75% 的配額了！&quot;);
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">}
@@ -577,25 +577,25 @@ fn main() {
 
     *value.borrow_mut() += 10;
 
-    println!(&quot;a after = {:?}&quot;, a);
-    println!(&quot;b after = {:?}&quot;, b);
-    println!(&quot;c after = {:?}&quot;, c);
+    println!(&quot;a 之後 = {:?}&quot;, a);
+    println!(&quot;b 之後 = {:?}&quot;, b);
+    println!(&quot;c 之後 = {:?}&quot;, c);
 }
 </code></pre></pre>
 <p><span class="caption">範例 15-24：使用 <code>Rc&lt;RefCell&lt;i32&gt;&gt;</code> 建立一個可變的 <code>List</code></span></p>
-<p>我們建立了一個 <code>Rc&lt;RefCell&lt;i32&gt;&gt;</code> 實例數值並將其存入變數 <code>value</code> 好像我們之後可以直接取得。然後我們在 <code>a</code> 用持有 <code>value</code> 的 <code>Cons</code> 變體來建立 <code>List</code>。我們需要克隆 <code>value</code>，這樣 <code>a</code> 和 <code>value</code> 才能都有內部數值 <code>5</code> 的所有權，而不是從 <code>value</code> 轉移所有權給 <code>a</code>，或是讓 <code>a</code> 借用 <code>value</code>。</p>
+<p>我們建立了一個 <code>Rc&lt;RefCell&lt;i32&gt;&gt;</code> 實例數值並將其存入變數 <code>value</code> 好讓我們之後可以直接取得。然後我們在 <code>a</code> 用持有 <code>value</code> 的 <code>Cons</code> 變體來建立 <code>List</code>。我們需要克隆 <code>value</code>，這樣 <code>a</code> 和 <code>value</code> 才能都有內部數值 <code>5</code> 的所有權，而不是從 <code>value</code> 轉移所有權給 <code>a</code>，或是讓 <code>a</code> 借用 <code>value</code>。</p>
 <p>我們用 <code>Rc&lt;T&gt;</code> 封裝列表 <code>a</code>，所以當我們建立列表 <code>b</code> 和 <code>c</code> 時，它們都可以引用 <code>a</code>，就像範例 15-18 一樣。</p>
-<p>在我們建立完列表 <code>a</code>、<code>b</code> 和 <code>c</code> 之後，我們對 <code>value</code> 的數值加上 10。我們對 <code>value</code> 呼叫 <code>borrow_mut</code>，其中使用到了我們在第五章討論過的自動解引用功能（請查閱<a href="ch05-03-method-syntax.html#%E9%81%8B%E7%AE%97%E5%AD%90%E8%B7%91%E5%8E%BB%E5%93%AA%E4%BA%86">「<code>-&gt;</code> 運算子跑去哪了？」</a><!-- ignore -->的段落）來解引用 <code>Rc&lt;T&gt;</code> 成內部的 <code>RefCell&lt;T&gt;</code> 數值。<code>borrow_mut</code> 方法會回傳 <code>RefMut&lt;T&gt;</code> 智慧指標，而我們使用解引用運算子並改變其內部數值。</p>
+<p>在我們建立完列表 <code>a</code>、<code>b</code> 和 <code>c</code> 之後，我們對 <code>value</code> 的數值加上 10。我們對 <code>value</code> 呼叫 <code>borrow_mut</code>，其中使用到了我們在第五章討論過的自動解引用功能（請查閱<a href="ch05-03-method-syntax.html#--%E9%81%8B%E7%AE%97%E5%AD%90%E8%B7%91%E5%8E%BB%E5%93%AA%E4%BA%86">「<code>-&gt;</code> 運算子跑去哪了？」</a><!-- ignore -->的段落）來解引用 <code>Rc&lt;T&gt;</code> 成內部的 <code>RefCell&lt;T&gt;</code> 數值。<code>borrow_mut</code> 方法會回傳 <code>RefMut&lt;T&gt;</code> 智慧指標，而我們使用解引用運算子並改變其內部數值。</p>
 <p>當我們印出 <code>a</code>、<code>b</code> 和 <code>c</code> 時，我們可以看到它們的數值都改成了 15 而非 5：</p>
 <pre><code class="language-console">$ cargo run
    Compiling cons-list v0.1.0 (file:///projects/cons-list)
     Finished dev [unoptimized + debuginfo] target(s) in 0.63s
      Running `target/debug/cons-list`
-a after = Cons(RefCell { value: 15 }, Nil)
-b after = Cons(RefCell { value: 3 }, Cons(RefCell { value: 15 }, Nil))
-c after = Cons(RefCell { value: 4 }, Cons(RefCell { value: 15 }, Nil))
+a 之後 = Cons(RefCell { value: 15 }, Nil)
+b 之後 = Cons(RefCell { value: 3 }, Cons(RefCell { value: 15 }, Nil))
+c 之後 = Cons(RefCell { value: 4 }, Cons(RefCell { value: 15 }, Nil))
 </code></pre>
-<p>此技巧是不是很厲害！透過使用 <code>RefCell&lt;T&gt;</code>，我們可以得到一個外部是不可變的 <code>List</code> 數值，但是我們可以使用 <code>RefCell&lt;T&gt;</code> 提供的方法來取得其內部可變性，讓我們可以在我們想要時改變我們的資料。執行時的借用規則檢查檢查能防止資料競爭，並在某些場合犧牲一點速度來換取資料結構的彈性。</p>
+<p>此技巧是不是很厲害！透過使用 <code>RefCell&lt;T&gt;</code>，我們可以得到一個外部是不可變的 <code>List</code> 數值，但是我們可以使用 <code>RefCell&lt;T&gt;</code> 提供的方法來取得其內部可變性，讓我們可以在我們想要時改變我們的資料。執行時的借用規則檢查能防止資料競爭，並在某些場合犧牲一點速度來換取資料結構的彈性。</p>
 <p>標準函式庫也提供了其他具有內部可變性的型別。像是 <code>Cell&lt;T&gt;</code>，這類似 <code>RefCell&lt;T&gt;</code> 但不同於給予內部數值的引用，<code>Cell&lt;T&gt;</code> 的數值會被拷貝出去。還有 <code>Mutex&lt;T&gt;</code> 能提供跨執行緒安全的內部可變性，我們會在第十六章討論如何使用它。歡迎查閱標準函式庫的計數文件來瞭解這些型別之間的細節差異。</p>
 <blockquote>
 <ul>
